pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hintechnologies-pod
  namespace: my-namespace 
  labels:
    app: nginx
spec:
  containers:
    - name: pod-component
      image: harishgorla5/project03:latest
      ports:
        - containerPort: 80
