Logstash-service.yaml
# logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: logging
spec:
  type: NodePort
  selector:
    app: logstash
  ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044
      nodePort: 32000
