loadbalencer.yaml
# 1.Tomcat Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0              # Official Tomcat image from Docker Hub
        ports:
        - containerPort: 8080          # Default port Tomcat listens on

---

# 2.LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: tomcat-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080                # Routes traffic to Tomcat's port
