mango-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongo
spec:
  clusterIP: None  # Headless service
  selector:
    app: mongo
  ports:
    - port: 27017
